--- a/RaidLog.Spa/App/widgets/textfield/view.html
+++ b/RaidLog.Spa/App/widgets/textfield/view.html
@@ -2,7 +2,7 @@
     <label class="control-label" data-bind="attr:{'for':settings.fieldName}, text:settings.label,css:settings.labelClass" data-part="label"></label>
     <div class="controls">
         <input type="text"
-             data-bind="attr: { id: settings.fieldName, name: settings.fieldName }, css: settings.fieldClass"
+             data-bind="attr: { id: settings.fieldName, name: settings.fieldName }, css: settings.fieldClass, value:settings.field"
              data-part="field"
              />
     </div>
