--- a/RaidLog.Spa/App/widgets/textfield/view_unvalidated.html
+++ b/RaidLog.Spa/App/widgets/textfield/view_unvalidated.html
@@ -1,4 +1,4 @@
-﻿<div class="control-group" data-part="group" data-bind="css: { error: !settings.isValid() }">
+﻿<div class="control-group">
     <label class="control-label" data-bind="attr:{'for':settings.fieldName}, text:settings.label,css:settings.labelClass" data-part="label"></label>
     <div class="controls">
         <input type="text"
