--- a/RaidLog.Spa/App/widgets/select/view.html
+++ b/RaidLog.Spa/App/widgets/select/view.html
@@ -2,7 +2,7 @@
     <label class="control-label" data-bind="attr:{'for':settings.fieldName}, text:settings.label,css:settings.labelClass" data-part="label"></label>
     <div class="controls">
         <select 
-             data-bind="attr: { id: settings.fieldName, name: settings.fieldName }, css: settings.fieldClass, value:settings.field, options:settings.options, optionsText:settings.optionsText, enabled:settings.enabled, visible:settings.visible"
+             data-bind="attr: { id: settings.fieldName, name: settings.fieldName }, css: settings.fieldClass, value:settings.field, options:settings.options, optionsText:settings.optionsText,optionsValue:settings.optionsValue, enable:settings.enabled, visible:settings.visible"
              data-part="field"
              />
     </div>
